# multimodal-financial-rag

./: .gitignore  multimodal-financial-rag-brief.md
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  .env.production.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 9e05861828e7_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: explain.py  health.py  ingest.py  search.py
backend/app/models/: document.py  schemas.py
backend/app/services/: embedding.py  explainability.py  ingest.py  metadata.py  sentiment.py  storage.py  vector_store.py
backend/app/utils/: audio.py  chunking.py
backend/scripts/: seed_all.py  seed_audio.py  seed_charts.py  seed_pdfs.py  seed_text.py
backend/tests/: conftest.py  test_config.py  test_embedding.py  test_explain_api.py  test_explainability.py  test_health.py  test_ingest.py  test_schemas.py  test_search.py  test_sentiment.py
docs/plans/: 2026-03-13-frontend-design.md  2026-03-14-phase3-demo-data-design.md  2026-03-14-phase4-deployment-design.md
docs/superpowers/plans/: 2026-03-14-phase3-demo-data.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AudioCard.tsx  ExplainPanel.tsx  FilterBar.tsx  ImageCard.tsx  PDFCard.tsx  PipelineBar.tsx  PipelineDiagram.tsx  ResultCard.tsx  SearchBar.tsx  ShapBarChart.tsx  ShapHighlight.tsx  ShapWaterfall.tsx  TextCard.tsx  ThemeToggle.tsx
frontend/src/hooks/: useSearch.ts
frontend/src/lib/: api.ts  types.ts
(+2 files in other folders)
